--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="frame">
+    <div class="frame" id="play" title="play song here">
         <div class="flag">
             <div class="red"></div>
             <div class="white">
@@ -62,7 +62,7 @@
                 <i class="fa-sharp fa-solid fa-person-rifle"></i>
                 <i class="fa-solid heli-1 fa-helicopter"></i><i class="fa-solid heli-2 fa-helicopter"></i><i class="fa-solid heli-3 fa-helicopter"></i>
             </marquee>
-            <audio id="audioElement" hidden>
+            <audio id="audioElement" hidden loop>
                 <source src="VandeMataram.mp3" type="audio/mp3">
             </audio>
         </div>
